Se sube ajuste de mon

--- a/src/app/nichos/configuracion-categorias/configuracion-categorias.component.html
+++ b/src/app/nichos/configuracion-categorias/configuracion-categorias.component.html
@@ -89,8 +89,17 @@
                                 <p-button label="Dev" class="mx-12" [loading]="loadings.dev" 
                                           [disabled]="!general?.carpetas?.dev"
                                           (click)="subirHomeDev(categoria)"
+                                          *ngIf="categoria.home"
                                           [severity]="categoria.dev ? 'success' : 'danger'"
                                           pTooltip="Generar el json de categoria para ambiente de dev" ></p-button>
+
+                                <p-button label="Dev" class="mx-12" [loading]="loadings.dev" 
+                                          [disabled]="!general?.carpetas?.dev"
+                                          (click)="subirCategoriaDev(categoria)"
+                                          *ngIf="!categoria.home"
+                                          [severity]="categoria.dev ? 'success' : 'danger'"
+                                          pTooltip="Generar el json de categoria para ambiente de dev" ></p-button>
+                                
 
                                 <p-button label="Prod" [loading]="loadings.prod" 
                                         [severity]="categoria.prod ? 'success' : 'danger'"
