--- a/src/app/nichos/configuracion-categorias/configuracion-categorias.component.html
+++ b/src/app/nichos/configuracion-categorias/configuracion-categorias.component.html
@@ -110,7 +110,9 @@
                                 <button pButton pRipple type="button" label="Add Noticias" 
                                         class="p-button-outlined p-button-secondary"
                                         (click)="irListadoNoticias(categoria)"></button>
-                                <button pButton pRipple type="button" label="Editar" class="p-button-outlined p-button-warning mx-4"></button>
+                                <button pButton pRipple type="button" label="Editar" 
+                                        class="p-button-outlined p-button-warning mx-4"
+                                        (click)="editarCategoria(categoria)"></button>
                                 <button pButton pRipple type="button" label="Eliminar" class="p-button-outlined p-button-info"></button>
                             </td>
                             <td *ngIf="categoria.home">
