--- a/src/app/nichos/configuracion-home/configuracion-home.component.html
+++ b/src/app/nichos/configuracion-home/configuracion-home.component.html
@@ -80,5 +80,12 @@
                 </div>
             </div>
         </div>
+        <div class="col-12">
+            <div class="card">
+                <h5>Autor del sition web</h5>
+                
+            </div>
+        </div>
+
     </ng-container>
 </div>
