--- a/src/app/nichos/configuracion-footer/configuracion-footer.component.html
+++ b/src/app/nichos/configuracion-footer/configuracion-footer.component.html
@@ -30,6 +30,10 @@
                     <button pButton pRipple type="button"
                             class="p-button-outlined p-button-warning" label="Guardar"
                             (click)="guardarFooter()"></button>
+
+                   <button pButton pRipple type="button"
+                            class="p-button-outlined p-button-warning ml-4" label="Actualizar"
+                            (click)="actualizarFooter()"></button>
                 </div>
                 <div class="col-12 text-right">
                     <p-button label="Local" [loading]="loadings.local" 
