--- a/src/app/nichos/configuracion-categorias/configuracion-categorias.component.html
+++ b/src/app/nichos/configuracion-categorias/configuracion-categorias.component.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="field">
                                 <h5>Home</h5>
-                                <p-inputSwitch [(ngModel)]="categoria.home"></p-inputSwitch>
+                                <p-inputSwitch [(ngModel)]="categoria.home" (onChange)="configuracionHome()"></p-inputSwitch>
                             </div>
                         </div>
                         <ng-template pTemplate="footer">
