--- a/src/app/nichos/configuracion-categorias/configuracion-categorias.component.html
+++ b/src/app/nichos/configuracion-categorias/configuracion-categorias.component.html
@@ -28,6 +28,10 @@
                                 <input pInputText id="titulo" name="titulo" type="text" [(ngModel)]="categoria.title"/>
                             </div>
                             <div class="field">
+                                <label htmlFor="titulo">Meta title</label>
+                                <input pInputText id="titulo" name="titulo" type="text" [(ngModel)]="categoria.mTitle"/>
+                            </div>
+                            <div class="field">
                                 <label htmlFor="url">Url</label>
                                 <input pInputText id="url" name="url" type="text" [(ngModel)]="categoria.url"/>
                             </div>
